fix(ZNTA-2168) increase contrast between active and inactive translation panels in GWT

--- a/server/zanata-war/src/main/webapp/resources/assets/css/application.css
+++ b/server/zanata-war/src/main/webapp/resources/assets/css/application.css
@@ -221,7 +221,7 @@ tr.selected > .transUnitCol:last-child {
 }
 
 .transUnitTable > tbody > tr {
-  opacity: 0.9;
+  opacity: 0.65;
 }
 
 .transUnitTable > tbody > tr .fadeElement {
